@@ -1,3 +1,12 @@
+2012-03-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCsymt.h,
+	* src/SDCCerr.c,
+	* src/SDCCerr.h,
+	* src/SDCC.y: fix struct/union tag scope problems
+	  (including bug #3487670)
+	* support/regression/tests/structscope.c: new tests
+
 2012-03-03 Borut Razem <borut.razem AT gmail.com>
 
 	* support/regression/ports/ucz80/spec.mk,
